@@ -83,6 +83,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/sql/2.2/schema.sql \
 	   phobos/db/sql/3.0/drop_schema.sql \
 	   phobos/db/sql/3.0/schema.sql \
+	   phobos/db/sql/3.2/drop_schema.sql \
+	   phobos/db/sql/3.2/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
